# MAGIC-TTS

./: .gitattributes  .gitignore  DEMO.md  LICENSE  README.md  TRAINING.md  index.html  pyproject.toml  requirements.txt  site.css
assets/default_prompt/: README.md  prompt.txt  prompt_alignment_debug.json  prompt_track.json
assets/default_prompt_en/: README.md  prompt.txt  prompt_alignment_debug.json  prompt_alignment_raw.json  prompt_track.json
checkpoints/: README.md
data/: README.md
data/b150_public_eval_smoke_100_pkg/: README.md  duration.json  export_info.json  selected_samples.exported.jsonl
data/b150_public_eval_smoke_100_pkg/raw/: data-00000-of-00001.arrow  dataset_info.json  state.json
f5_tts/: __init__.py
f5_tts/infer/: utils_infer.py
f5_tts/model/: __init__.py  cfm.py  modules.py  utils.py
inference/: align_prompt_with_mfa.py  release_utils.py  run_edit_demo.py  run_edit_from_json.py  run_magictts.py  run_paper_demos.py  run_spontaneous_demo.py  run_spontaneous_suite.py
outputs/: README.md
outputs/control_track_example/: custom_track.json  entry_summary.json  prompt_alignment_debug.json  prompt_alignment_raw.json  prompt_track.json  request.json  synthesis_metadata.json
outputs/controlled_demos/default_voice/05_contrastive_meaning/controlled/: custom_track.json  entry_summary.json  request.json  (+2 more)
outputs/spontaneous_demos/05_contrastive_meaning/spontaneous/: summary.json
outputs/spontaneous_demos/06_dramatic_line/spontaneous/: summary.json
presets/: accessibility_code.json  kids_reading.json  navigation_turn.json  station_wushanzhan.json
scripts/: prepare_finetune_dataset.sh  run_finetune.sh  run_long_en_inline_smoke.sh  run_long_en_inline_smoke_custom_prompt.sh  setup.sh  submit_long_en_inline_smoke.sh  submit_long_en_inline_smoke_custom_prompt.sh
tools/f5tts_duration_ft/: README.md  prepare_emilia_1nv_merged_worddur.py  prepare_emilia_1nv_mfa_shards.py  prepare_emilia_ttrack_mfa_shards.py  run_mfa_alignment_shard.py
training/: export_public_eval_smoke.py  run_finetune.py  upload_hf_dataset.py
(+6 files in other folders)
